@@ -407,7 +407,7 @@ _GLIBCXX_END_NAMESPACE_VERSION
 # endif
 
 // Feature test macro for parallel algorithms
-# define __cpp_lib_parallel_algorithm 201703L
+# define __cpp_lib_parallel_algorithm 201603L
 #endif // C++17
 
 #endif /* _GLIBCXX_MEMORY */
